# markdown_bib_processor

./: Cargo.toml  NOTICE.txt  README.md  WIKI.md  bib.bib  chicago.csl  index (Copy 2).html  index (Copy).html  index.html  md.md  script (Copy 2).js  script (Copy).js  script.js  test.html  test.js
.idx/: dev.nix
src/: lib (Copy).rsbk  lib (Copy).rsbk2  lib (Copy).rsbk4  lib.rs  lib.rsbk3  main.rs  tests.rs
