[package]
name = "markdown_bib_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
nom-bibtex = "0.4"
serde = { version = "1.0", features = ["derive"] }
linked-hash-map = "0.5"
levenshtein = "1.0"
once_cell = "1.19.0"
clap = { version = "4.0", features = ["derive"] }
hayagriva = "0.9" # Check crates.io for the absolute latest version
